Fix in libfm-extra.pc: it should have name libfm-extra, not libfm.

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,5 +1,6 @@
 洪任諭 (Hong Jen Yee, aka PCMan) <pcman.tw@gmail.com>
 Jürgen Hötzel <juergen@archlinux.org>
+Andriy Grytsenko (LStranger) <andrej@rep.kiev.ua>
 
 External source code taken from other projects:
  * ExoIconView, ExoTreeView, along with the source code in src/exo:
