--- a/NEWS
+++ b/NEWS
@@ -156,6 +156,14 @@ Changes on 1.2.0 since 1.1.0:
     visible in folder view only when 'Show hidden' is on. This will work
     only with libmenu-cache 0.5.0 or newer.
 
+* Default behavior of drag and drop files on desktop is to create a link
+    (symlink or shortcut) from now on.
+
+* Implemented creating shortcuts (desktop entries with Type=Link) so it
+    is possible now to drop a link from browser to desktop. The link will
+    be opened with default browser when you click on it. And you can edit
+    display name and icon of created shortcut to your preference.
+
 
 Changes on 1.1.0 since 1.0.1:
 
